--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ script:
   #   - source ./ofTravis/common/package_app.sh
   - source ./ofTravis/common/compile_addon_examples.sh
   - if [ "$TRAVIS_OS_NAME" = osx ]; then source ./ofTravis/osx/add_certificate.sh; fi
+  - if [ "$TRAVIS_OS_NAME" = osx ]; then source ./ofTravis/osx/sign_addon_examples.sh; fi
   - source ./ofTravis/common/package_addon.sh
 
 deploy:
